--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
 <p>Pioneiro e quebrador de paradigmas, Musk sempre pensou à frente do seu tempo, e (literalmente) aposta todas as suas moedas em inovações tecnológicas que visam, muito além do enriquecimento pessoal, o desenvolvimento coletivo da humanidade.</p>
 <p>Nascimento: 28 de junho de 1971</p>
 <p>Patrimônio líquido: 215,4 bilhões USD (2022).</p>
-<p>Se formou na Universidade da Pensilvânia e, obteve diploma em física e econômia.</font></p>
+<p>Se formou na Universidade da Pensilvânia e, obteve diploma em física e econômia.
+<p>Parte do dinheiro que Musk ganou com a venda do PayPal foi destinado à SpaceX, empresa que o empreendedor havia fundado em 2002. A SpaceX é uma empresa voltada aos assuntos aerospaciais do empreendedor
+
+A SpaceX tornou-se a primeira empresa de financiamento privado a colocar um satélite na órbita terrestre, além de ser o primeiro grupo privado a mandar uma nave para embarcar na Estação Espacial Internacional – EEI.</p>
+<p>A Starlink é um empreendimento ligado à SpaceX. O projeto consiste em implementar um sistema com satélites que permita o acesso à internet de alta qualidade ao redor do globo.</font></p>
 </body>
 </html>
