--- a/index.html
+++ b/index.html
@@ -16,22 +16,18 @@
 <p>Nascimento: 28 de junho de 1971</p>
 <p>Patrimônio líquido: 215,4 bilhões USD (2022).</p>
 <p>Se formou na Universidade da Pensilvânia e, obteve diploma em física e econômia.
-<p>Parte do dinheiro que Musk ganhou com a venda do PayPal foi destinado à SpaceX, empresa que o empreendedor havia fundado em 2002. A SpaceX é uma empresa voltada aos assuntos aerospaciais do empreendedor
-
-A SpaceX tornou-se a primeira empresa de financiamento privado a colocar um satélite na órbita terrestre, além de ser o primeiro grupo privado a mandar uma nave para embarcar na Estação Espacial Internacional – EEI.</p>
+<p>Parte do dinheiro que Musk ganhou com a venda do PayPal foi destinado à SpaceX, empresa que o empreendedor havia fundado em 2002. A SpaceX é uma empresa voltada aos assuntos aerospaciais do empreendedor. A SpaceX tornou-se a primeira empresa de financiamento privado a colocar um satélite na órbita terrestre, além de ser o primeiro grupo privado a mandar uma nave para embarcar na Estação Espacial Internacional – EEI.</p>
 <p>A Starlink é um empreendimento ligado à SpaceX. O projeto consiste em implementar um sistema com satélites que permita o acesso à internet de alta qualidade ao redor do globo.</font>
 <h2>Neuralick</h2>
 <p><font size="5">Elon Musk deu início a um novo projeto, o neuralink, é uma tecnologia que muitas pessoas estão assustadas pois nunca viram nada parecido.</p>
 <p>O Neuralink é um dispositivo que em sua versão atual possui uma polegada de diâmetro. Ele contém uma bateria, bluetooth e um carregador indutivo. Além de fios que serão instalados com o auxílio de robôs. O próprio dispositivo irá substituir a parte do crânio que foi retirada. Elon afirma que o dispositivo pode ser retirado a qualquer momento.
 
 De acordo com as informações do site oficial da Neuralink eles afirmam: “Estamos projetando o Link para se conectar a milhares de neurônios no cérebro. Ele poderá registrar a atividade desses neurônios, processar esses sinais em tempo real e enviar essas informações para o Link. Como primeira aplicação dessa tecnologia, planejamos ajudar pessoas com tetraplegia, dando-lhes a capacidade de controlar computadores e dispositivos móveis diretamente com seus cérebros.”</p>
-<pO primeiro passo é a instalação do dispositivo no cérebro. Além do chip são colocados os agentes de eletrodos nos fios. Após a instalação, o grande empresário afirma que ninguém vai suspeitar que você pode ter um chip no cérebro.
+<p> O primeiro passo é a instalação do dispositivo no cérebro. Além do chip são colocados os agentes de eletrodos nos fios. Após a instalação, o grande empresário afirma que ninguém vai suspeitar que você pode ter um chip no cérebro.</p>
 
-“Ele pode interagir basicamente com qualquer área do seu cérebro. Então pode ser algo que te ajude a curar uma perda de visão. Retorna sua visão mesmo se você perdeu seu tipo de nervo óptico”, afirmou Musk.</p>
+<p>“Ele pode interagir basicamente com qualquer área do seu cérebro. Então pode ser algo que te ajude a curar uma perda de visão. Retorna sua visão mesmo se você perdeu seu tipo de nervo óptico”, afirmou Musk.</p>
 <h3>Qual o intuito?</h3>
-<p>De acordo com Elon Musk o Neuralink tem a capacidade de “corrigir quase tudo o que está errado com o cérebro". Ou seja, pode restaurar a funcionalidade de um membro. Fazendo assim com que alguém que seja tetraplégico retorne à “plena funcionalidade”.
-
-Ele chegou a comparar a funcionalidade futura do dispositivo com um seriado antigo de TV, O homem de 6 milhões de dólares, no qual o protagonista sofreu um acidente e é reconstruído como um ciborgue.</p></font>
+<p>De acordo com Elon Musk o Neuralink tem a capacidade de “corrigir quase tudo o que está errado com o cérebro". Ou seja, pode restaurar a funcionalidade de um membro. Fazendo assim com que alguém que seja tetraplégico retorne à “plena funcionalidade”. Ele chegou a comparar a funcionalidade futura do dispositivo com um seriado antigo de TV, O homem de 6 milhões de dólares, no qual o protagonista sofreu um acidente e é reconstruído como um ciborgue.</p></font>
 <img src="img2.jpeg"alt="Imagem Elon Musk"width="250px"height="350px">
 
 </body>
