--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ De acordo com as informações do site oficial da Neuralink eles afirmam: “Est
 <p>“Ele pode interagir basicamente com qualquer área do seu cérebro. Então pode ser algo que te ajude a curar uma perda de visão. Retorna sua visão mesmo se você perdeu seu tipo de nervo óptico”, afirmou Musk.</p>
 <h3>Qual o intuito?</h3>
 <p>De acordo com Elon Musk o Neuralink tem a capacidade de “corrigir quase tudo o que está errado com o cérebro". Ou seja, pode restaurar a funcionalidade de um membro. Fazendo assim com que alguém que seja tetraplégico retorne à “plena funcionalidade”. Ele chegou a comparar a funcionalidade futura do dispositivo com um seriado antigo de TV, O homem de 6 milhões de dólares, no qual o protagonista sofreu um acidente e é reconstruído como um ciborgue.</p></font>
-<img src="img2.jpeg"alt="Imagem Elon Musk"width="250px"height="350px">
+<img src="neuralink.jpeg"alt="Imagem Elon Musk"width="250px"height="350px">
 
 </body>
 </html>
